--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 version: '3'
 services:
+  mail:
+    image: mailhog/mailhog
+    ports:
+      - 8025:8025
   app:
-    image: decidim/decidim:latest
+    image: decidim/decidim
     volumes:
       - .:/app
       - bundle:/usr/local/bundle
@@ -20,7 +24,21 @@ services:
     image: postgres
     volumes:
       - pg-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
+
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@decidim.org
+      - PGADMIN_DEFAULT_PASSWORD=changeme
+    ports:
+      - 5050:80
 volumes:
   node_modules: {}
   bundle: {}
   pg-data: {}
+  pgadmin-data: {}
