--- a/fly.toml
+++ b/fly.toml
@@ -7,7 +7,7 @@ kill_timeout = 5
 processes = []
 
 [deploy]
-  release_command = "rails db:setup"
+  release_command = "rails db:migrate"
 
 [env]
   LOG_LEVEL = "warning"
